--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 5
+      ziemniak: pyrka
 
     steps:
     - uses: actions/checkout@v2
